Add .gitignore and update project files for production

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=5000
 MONGODB_URI=mongodb+srv://ankitkumar2020:ankit-1109@kiran.puwby5a.mongodb.net/?retryWrites=true&w=majority&appName=Kiran
 JWT_SECRET=kiran-mentorship
+EMAIL_USER=adityasinghofficial296@gmail.com
+EMAIL_PASS=jexuaqmsfzloknef
