--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.10.0",
     "firebase": "^10.12.3",
     "react": "^19.1.0",
